--- a/.gitattributes
+++ b/.gitattributes
@@ -6,9 +6,9 @@
 
 
 # Declare files that will always have CRLF line endings on checkout.
-*.sln text eol=crlf
-*.m text eol=crlf
-*.txt text eol=crlf
+*.sln text eol=lf
+*.m text eol=lf
+*.txt text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.fig binary
